--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,6 @@
     <title>Astro</title>
   </head>
   <body>
-    <a href="/week3">week 3 </a>
+    <a href="mimi-fitnes/week3">week 3 </a>
   </body>
 </html>
